# Masterarbeit

./: .gitignore  ChannelExtraction.py  EvaluationMethod.py  HMM.py  StackedRandomForest.py  ToDos.py  XGBoost.py  compare_heatmaps.py  datastream.py  extract_and_visualize_data.py  find_best_configuration.py  helpers.py  main.py  main2.py  realtime_heatmap.py  see_if_works.py  see_recording_differences.py  selfConstructedTrees.py  spatial.py  visualize_heatmaps_bracelett.py
creating_heatmaps/creating_heatmaps/: .gitignore  bad_channels.txt  pyproject.toml
creating_heatmaps/creating_heatmaps/creating_heatmaps/: helpers.py  main.py
exo_controller/: DTW.py  ExtractImportantChannels.py  Interface_Datageneration_Virtual_Hand.py  MovementPrediction.py  ShallowConv.py  ShallowConv2.py  Videoplayer.py  butterworth.py  datastream.py  emg_interface.py  exo_controller.py  filter.py  grid_arrangement.py  helpers.py  main.py  muovipro.py  normalizations.py  spatial_filters.py
trainings_data/: X_test_local_100_64.pkl  X_test_local_150_64.pkl  X_train_local_100_64.pkl  X_train_local_150_64.pkl  y_test_local_100_64.pkl  y_test_local_150_64.pkl  y_train_local_100_64.pkl  y_train_local_150_64.pkl
