[tool.poetry]
name = "creating-heatmaps"
version = "0.1.0"
description = ""
authors = ["Dominik Braun <dome.braun@fau.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
tqdm = "^4.66.1"
opencv-python = "^4.8.1.78"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
pytorch = "poetry run pip install torch==2.1.0+cu121 --extra-index-url https://download.pytorch.org/whl/cu121 --upgrade"
